improved data cleaning

--- a/notebooks/data/data-cleaning.ipynb
+++ b/notebooks/data/data-cleaning.ipynb
@@ -63,84 +63,115 @@
    "id": "884255a2",
    "metadata": {},
    "source": [
-    "## Wiederholungen aus Serien entfernen"
+    "## Serien säubern"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "be860987",
+   "id": "f6cc2c2d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sequence_length = 24 * 60 * 12 # 17280 Steps = 1 Day\n",
-    "plot_series = False\n",
+    "### PARAMS\n",
+    "ANGLEZ_VARIANCE_SEQUENCE_LENGTH = 6 * 60 * 12 # 8h\n",
+    "ANGLEZ_REPETITION_SEQUENCE_LENGTH = 4 * 60 * 12 # 4h\n",
     "\n",
-    "def remove_duplicates(series_id):\n",
-    "    series_to_clean = pd.read_parquet('../../data/raw/series.parquet', filters=[('series_id','=',series_id)])\n",
-    "\n",
-    "    multiplicator = 0\n",
-    "\n",
-    "    indices_to_remove = []\n",
-    "\n",
-    "    if plot_series:\n",
-    "        fig, ax = plt.subplots(figsize=(20, 3))\n",
-    "        sns.lineplot(data=series_to_clean, x=\"step\", y=\"anglez\", linewidth = 0.5)\n",
-    "        plt.show()\n",
-    "\n",
-    "    while True:\n",
-    "        comparing_sequence = series_to_clean[multiplicator*sequence_length:(multiplicator+1)*sequence_length]\n",
-    "        # Get 24 Hours (s1) and the next 24 Hours (s2)\n",
-    "        s1 = series_to_clean[multiplicator*sequence_length:(multiplicator+1)*sequence_length]['anglez'].reset_index(drop=True)\n",
-    "        s2 = series_to_clean[(multiplicator+1)*sequence_length:(multiplicator+2)*sequence_length]['anglez'].reset_index(drop=True)\n",
-    "\n",
-    "        # If the length is not the same, its the last part of the series\n",
-    "        if len(s1) != len(s2):\n",
-    "            # If the last part of the series is the same as the part 24 hours before, remove that as well\n",
-    "            if s1[:len(s2)].equals(s2):\n",
-    "                indices_to_remove.append((len(series_to_clean)-len(s2), len(series_to_clean)))\n",
-    "            break\n",
-    "\n",
-    "        # If the 24 hours match, remove those indices\n",
-    "        if s1.equals(s2):\n",
-    "            indices_to_remove.append(((multiplicator+1)*sequence_length, (multiplicator+2)*sequence_length))\n",
-    "\n",
-    "        if not s1[(s1 > 50) | (s1 < -50)].any():\n",
-    "            indices_to_remove.append(((multiplicator)*sequence_length, (multiplicator+1)*sequence_length))\n",
-    "\n",
-    "        # check for any repeating 24h in whole series\n",
-    "        for current_sequence_index in range(0, len(series_to_clean), sequence_length):\n",
-    "            end_sequence_index = current_sequence_index + sequence_length\n",
-    "            if len(series_to_clean) < end_sequence_index:\n",
-    "                end_sequence_index = len(series_to_clean) - 1\n",
-    "            sequence = series_to_clean[current_sequence_index:end_sequence_index]\n",
-    "            sequence_angle = sequence['anglez'].reset_index(drop=True)\n",
-    "            comparing_sequence_angle = comparing_sequence['anglez'].reset_index(drop=True)\n",
-    "            if sequence_angle.equals(comparing_sequence_angle):\n",
-    "                sequence_step = sequence['step'].reset_index(drop=True)\n",
-    "                comparing_sequence_step = comparing_sequence['step'].reset_index(drop=True)\n",
-    "                if not sequence_step.equals(comparing_sequence_step):\n",
-    "                    indices_to_remove.append((current_sequence_index, current_sequence_index + sequence_length))\n",
-    "        multiplicator += 1\n",
-    "\n",
-    "\n",
-    "    cleaned_df = series_to_clean\n",
-    "\n",
-    "    # Remove the indices reversed, otherwise the indices of the remaining rows change\n",
-    "    for start_idx, end_idx in reversed(indices_to_remove):\n",
-    "        cleaned_df = cleaned_df.drop(index=cleaned_df.iloc[start_idx:end_idx].index)\n",
-    "\n",
-    "    if plot_series:\n",
-    "        fig, ax = plt.subplots(figsize=(20, 3))\n",
-    "        sns.lineplot(data=cleaned_df, x=\"step\", y=\"anglez\", linewidth = 0.5)\n",
-    "        plt.show()\n",
-    "    \n",
-    "    return cleaned_df"
+    "CLEAN_BUFFER = 3 * 60 * 12 # 3h"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "be860987",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mark_clean_anglez_too_low_variance(series):\n",
+    "    last_step = series.iloc[-1]['step']       \n",
+    "    \n",
+    "    for current_start_step in range(0, len(series), ANGLEZ_VARIANCE_SEQUENCE_LENGTH):\n",
+    "        current_end_step = current_start_step + ANGLEZ_VARIANCE_SEQUENCE_LENGTH\n",
+    "\n",
+    "        series_chunk = series[current_start_step:current_end_step]\n",
+    "\n",
+    "        series_chunk_anglez = series_chunk['anglez'].abs()\n",
+    "        if not (series_chunk_anglez > 50).any():\n",
+    "            clean_from = max(0, current_start_step - CLEAN_BUFFER)\n",
+    "            clean_to = min(last_step, current_end_step + CLEAN_BUFFER)\n",
+    "            \n",
+    "            series.loc[clean_from:clean_to, 'clean'] = 1\n",
+    "\n",
+    "    return series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ccc8901d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mark_clean_repetition(series):\n",
+    "    last_step = series.iloc[-1]['step']       \n",
+    "\n",
+    "    for current_start_step in range(0, len(series), ANGLEZ_REPETITION_SEQUENCE_LENGTH):\n",
+    "        current_end_step = current_start_step + ANGLEZ_REPETITION_SEQUENCE_LENGTH\n",
+    "\n",
+    "        series_chunk = series[current_start_step:current_end_step].reset_index(drop=True)\n",
+    "\n",
+    "        for comparing_start_step in range(current_end_step, len(series), ANGLEZ_REPETITION_SEQUENCE_LENGTH):\n",
+    "            comparing_end_step = comparing_start_step + ANGLEZ_REPETITION_SEQUENCE_LENGTH\n",
+    "            comparing_series_chunk = series[comparing_start_step:comparing_end_step].reset_index(drop=True)\n",
+    "\n",
+    "            if series_chunk['anglez'].equals(comparing_series_chunk['anglez']):\n",
+    "                clean_from = max(0, current_start_step - CLEAN_BUFFER)\n",
+    "                clean_to = min(last_step, current_end_step + CLEAN_BUFFER)\n",
+    "                series.loc[clean_from:clean_to, 'clean'] = 1\n",
+    "                \n",
+    "                clean_from = max(0, comparing_start_step - CLEAN_BUFFER)\n",
+    "                clean_to = min(last_step, comparing_end_step + CLEAN_BUFFER)\n",
+    "                series.loc[clean_from:clean_to, 'clean'] = 1\n",
+    "\n",
+    "    return series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a3de77d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mark_clean(series):\n",
+    "    series['clean'] = 0\n",
+    "\n",
+    "    series = mark_clean_anglez_too_low_variance(series)\n",
+    "    series = mark_clean_repetition(series)\n",
+    "\n",
+    "    return series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "036aa22f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cleaning(series_id, events):\n",
+    "    events = events[events.series_id == series_id].reset_index(drop=True)\n",
+    "    series = pd.read_parquet('../../data/raw/series_merged.parquet', filters=[('series_id', '=', series_id)])\n",
+    "    \n",
+    "    series = mark_clean(series)\n",
+    "    series = series[series.clean == 0]\n",
+    "    \n",
+    "    return series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "9cbbbc56",
    "metadata": {
     "scrolled": true
@@ -427,8 +458,8 @@
       "Step 275 of 277\n",
       "Step 276 of 277\n",
       "Step 277 of 277\n",
-      "CPU times: total: 1min 24s\n",
-      "Wall time: 2min 7s\n"
+      "CPU times: total: 58min 2s\n",
+      "Wall time: 35min 40s\n"
      ]
     }
    ],
@@ -441,7 +472,7 @@
     "\n",
     "for i, series_id in enumerate(train_events.series_id.unique()):\n",
     "    print(f'Step {i+1} of {total_len}')\n",
-    "    train = remove_duplicates(series_id)\n",
+    "    train = cleaning(series_id, train_events)\n",
     "    train_data.append(train)\n",
     "    del train\n",
     "    gc.collect()\n",
@@ -451,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "28de6b7b",
    "metadata": {},
    "outputs": [
@@ -459,7 +490,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(109178100, 6)\n"
+      "(90193150, 8)\n"
      ]
     }
    ],
@@ -477,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "a74dd8eb",
    "metadata": {},
    "outputs": [
@@ -486,7 +517,7 @@
      "output_type": "stream",
      "text": [
       "Serien ohne Events: \n",
-      " ['390b487231ce', 'e11b9d69f856', '89c7daa72eee', '2fc653ca75c7', 'a3e59c2ce3f6', '0f9e60a8e56d', 'c7b1283bb7eb', 'c5d08fc3e040']\n"
+      " ['e11b9d69f856', 'a3e59c2ce3f6', 'c7b1283bb7eb', '2fc653ca75c7', '89c7daa72eee', '0f9e60a8e56d', '390b487231ce', 'c5d08fc3e040']\n"
      ]
     }
    ],
@@ -502,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "25d728a6",
    "metadata": {},
    "outputs": [],
@@ -521,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "ad02737e",
    "metadata": {},
    "outputs": [
@@ -529,7 +560,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(107115120, 6)\n",
+      "(89544144, 8)\n",
       "(14154, 6)\n"
      ]
     }
@@ -541,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "e16255d9",
    "metadata": {},
    "outputs": [],
@@ -567,7 +598,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
