--- a/notebooks/data/data-merge.ipynb
+++ b/notebooks/data/data-merge.ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_events = pd.read_csv('../../data/cleaned/events.csv')"
+    "train_events = pd.read_csv('../../data/raw/events.csv')"
    ]
   },
   {
@@ -54,11 +54,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_merged_series(series, buffer_size):\n",
-    "    train_series = pd.read_parquet('../../data/cleaned/series.parquet', filters=[('series_id','=',series)])\n",
+    "def get_merged_series(series):\n",
+    "    train_series = pd.read_parquet('../../data/raw/series.parquet', filters=[('series_id','=',series)])\n",
     "    train_events_filtered = train_events.query('series_id == @series')\n",
-    "    true_events = train_events_filtered[train_events_filtered['step'].notna()].reset_index()\n",
-    "    events_with_na = pd.concat([train_events_filtered])\n",
     "\n",
     "    train_events_filtered = train_events_filtered.dropna()\n",
     "    train_events_filtered['step'] = train_events_filtered['step'].astype('int')\n",
@@ -78,284 +76,292 @@
    "execution_count": 4,
    "id": "44a42912",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Step 1 of 269\n",
-      "Step 2 of 269\n",
-      "Step 3 of 269\n",
-      "Step 4 of 269\n",
-      "Step 5 of 269\n",
-      "Step 6 of 269\n",
-      "Step 7 of 269\n",
-      "Step 8 of 269\n",
-      "Step 9 of 269\n",
-      "Step 10 of 269\n",
-      "Step 11 of 269\n",
-      "Step 12 of 269\n",
-      "Step 13 of 269\n",
-      "Step 14 of 269\n",
-      "Step 15 of 269\n",
-      "Step 16 of 269\n",
-      "Step 17 of 269\n",
-      "Step 18 of 269\n",
-      "Step 19 of 269\n",
-      "Step 20 of 269\n",
-      "Step 21 of 269\n",
-      "Step 22 of 269\n",
-      "Step 23 of 269\n",
-      "Step 24 of 269\n",
-      "Step 25 of 269\n",
-      "Step 26 of 269\n",
-      "Step 27 of 269\n",
-      "Step 28 of 269\n",
-      "Step 29 of 269\n",
-      "Step 30 of 269\n",
-      "Step 31 of 269\n",
-      "Step 32 of 269\n",
-      "Step 33 of 269\n",
-      "Step 34 of 269\n",
-      "Step 35 of 269\n",
-      "Step 36 of 269\n",
-      "Step 37 of 269\n",
-      "Step 38 of 269\n",
-      "Step 39 of 269\n",
-      "Step 40 of 269\n",
-      "Step 41 of 269\n",
-      "Step 42 of 269\n",
-      "Step 43 of 269\n",
-      "Step 44 of 269\n",
-      "Step 45 of 269\n",
-      "Step 46 of 269\n",
-      "Step 47 of 269\n",
-      "Step 48 of 269\n",
-      "Step 49 of 269\n",
-      "Step 50 of 269\n",
-      "Step 51 of 269\n",
-      "Step 52 of 269\n",
-      "Step 53 of 269\n",
-      "Step 54 of 269\n",
-      "Step 55 of 269\n",
-      "Step 56 of 269\n",
-      "Step 57 of 269\n",
-      "Step 58 of 269\n",
-      "Step 59 of 269\n",
-      "Step 60 of 269\n",
-      "Step 61 of 269\n",
-      "Step 62 of 269\n",
-      "Step 63 of 269\n",
-      "Step 64 of 269\n",
-      "Step 65 of 269\n",
-      "Step 66 of 269\n",
-      "Step 67 of 269\n",
-      "Step 68 of 269\n",
-      "Step 69 of 269\n",
-      "Step 70 of 269\n",
-      "Step 71 of 269\n",
-      "Step 72 of 269\n",
-      "Step 73 of 269\n",
-      "Step 74 of 269\n",
-      "Step 75 of 269\n",
-      "Step 76 of 269\n",
-      "Step 77 of 269\n",
-      "Step 78 of 269\n",
-      "Step 79 of 269\n",
-      "Step 80 of 269\n",
-      "Step 81 of 269\n",
-      "Step 82 of 269\n",
-      "Step 83 of 269\n",
-      "Step 84 of 269\n",
-      "Step 85 of 269\n",
-      "Step 86 of 269\n",
-      "Step 87 of 269\n",
-      "Step 88 of 269\n",
-      "Step 89 of 269\n",
-      "Step 90 of 269\n",
-      "Step 91 of 269\n",
-      "Step 92 of 269\n",
-      "Step 93 of 269\n",
-      "Step 94 of 269\n",
-      "Step 95 of 269\n",
-      "Step 96 of 269\n",
-      "Step 97 of 269\n",
-      "Step 98 of 269\n",
-      "Step 99 of 269\n",
-      "Step 100 of 269\n",
-      "Step 101 of 269\n",
-      "Step 102 of 269\n",
-      "Step 103 of 269\n",
-      "Step 104 of 269\n",
-      "Step 105 of 269\n",
-      "Step 106 of 269\n",
-      "Step 107 of 269\n",
-      "Step 108 of 269\n",
-      "Step 109 of 269\n",
-      "Step 110 of 269\n",
-      "Step 111 of 269\n",
-      "Step 112 of 269\n",
-      "Step 113 of 269\n",
-      "Step 114 of 269\n",
-      "Step 115 of 269\n",
-      "Step 116 of 269\n",
-      "Step 117 of 269\n",
-      "Step 118 of 269\n",
-      "Step 119 of 269\n",
-      "Step 120 of 269\n",
-      "Step 121 of 269\n",
-      "Step 122 of 269\n",
-      "Step 123 of 269\n",
-      "Step 124 of 269\n",
-      "Step 125 of 269\n",
-      "Step 126 of 269\n",
-      "Step 127 of 269\n",
-      "Step 128 of 269\n",
-      "Step 129 of 269\n",
-      "Step 130 of 269\n",
-      "Step 131 of 269\n",
-      "Step 132 of 269\n",
-      "Step 133 of 269\n",
-      "Step 134 of 269\n",
-      "Step 135 of 269\n",
-      "Step 136 of 269\n",
-      "Step 137 of 269\n",
-      "Step 138 of 269\n",
-      "Step 139 of 269\n",
-      "Step 140 of 269\n",
-      "Step 141 of 269\n",
-      "Step 142 of 269\n",
-      "Step 143 of 269\n",
-      "Step 144 of 269\n",
-      "Step 145 of 269\n",
-      "Step 146 of 269\n",
-      "Step 147 of 269\n",
-      "Step 148 of 269\n",
-      "Step 149 of 269\n",
-      "Step 150 of 269\n",
-      "Step 151 of 269\n",
-      "Step 152 of 269\n",
-      "Step 153 of 269\n",
-      "Step 154 of 269\n",
-      "Step 155 of 269\n",
-      "Step 156 of 269\n",
-      "Step 157 of 269\n",
-      "Step 158 of 269\n",
-      "Step 159 of 269\n",
-      "Step 160 of 269\n",
-      "Step 161 of 269\n",
-      "Step 162 of 269\n",
-      "Step 163 of 269\n",
-      "Step 164 of 269\n",
-      "Step 165 of 269\n",
-      "Step 166 of 269\n",
-      "Step 167 of 269\n",
-      "Step 168 of 269\n",
-      "Step 169 of 269\n",
-      "Step 170 of 269\n",
-      "Step 171 of 269\n",
-      "Step 172 of 269\n",
-      "Step 173 of 269\n",
-      "Step 174 of 269\n",
-      "Step 175 of 269\n",
-      "Step 176 of 269\n",
-      "Step 177 of 269\n",
-      "Step 178 of 269\n",
-      "Step 179 of 269\n",
-      "Step 180 of 269\n",
-      "Step 181 of 269\n",
-      "Step 182 of 269\n",
-      "Step 183 of 269\n",
-      "Step 184 of 269\n",
-      "Step 185 of 269\n",
-      "Step 186 of 269\n",
-      "Step 187 of 269\n",
-      "Step 188 of 269\n",
-      "Step 189 of 269\n",
-      "Step 190 of 269\n",
-      "Step 191 of 269\n",
-      "Step 192 of 269\n",
-      "Step 193 of 269\n",
-      "Step 194 of 269\n",
-      "Step 195 of 269\n",
-      "Step 196 of 269\n",
-      "Step 197 of 269\n",
-      "Step 198 of 269\n",
-      "Step 199 of 269\n",
-      "Step 200 of 269\n",
-      "Step 201 of 269\n",
-      "Step 202 of 269\n",
-      "Step 203 of 269\n",
-      "Step 204 of 269\n",
-      "Step 205 of 269\n",
-      "Step 206 of 269\n",
-      "Step 207 of 269\n",
-      "Step 208 of 269\n",
-      "Step 209 of 269\n",
-      "Step 210 of 269\n",
-      "Step 211 of 269\n",
-      "Step 212 of 269\n",
-      "Step 213 of 269\n",
-      "Step 214 of 269\n",
-      "Step 215 of 269\n",
-      "Step 216 of 269\n",
-      "Step 217 of 269\n",
-      "Step 218 of 269\n",
-      "Step 219 of 269\n",
-      "Step 220 of 269\n",
-      "Step 221 of 269\n",
-      "Step 222 of 269\n",
-      "Step 223 of 269\n",
-      "Step 224 of 269\n",
-      "Step 225 of 269\n",
-      "Step 226 of 269\n",
-      "Step 227 of 269\n",
-      "Step 228 of 269\n",
-      "Step 229 of 269\n",
-      "Step 230 of 269\n",
-      "Step 231 of 269\n",
-      "Step 232 of 269\n",
-      "Step 233 of 269\n",
-      "Step 234 of 269\n",
-      "Step 235 of 269\n",
-      "Step 236 of 269\n",
-      "Step 237 of 269\n",
-      "Step 238 of 269\n",
-      "Step 239 of 269\n",
-      "Step 240 of 269\n",
-      "Step 241 of 269\n",
-      "Step 242 of 269\n",
-      "Step 243 of 269\n",
-      "Step 244 of 269\n",
-      "Step 245 of 269\n",
-      "Step 246 of 269\n",
-      "Step 247 of 269\n",
-      "Step 248 of 269\n",
-      "Step 249 of 269\n",
-      "Step 250 of 269\n",
-      "Step 251 of 269\n",
-      "Step 252 of 269\n",
-      "Step 253 of 269\n",
-      "Step 254 of 269\n",
-      "Step 255 of 269\n",
-      "Step 256 of 269\n",
-      "Step 257 of 269\n",
-      "Step 258 of 269\n",
-      "Step 259 of 269\n",
-      "Step 260 of 269\n",
-      "Step 261 of 269\n",
-      "Step 262 of 269\n",
-      "Step 263 of 269\n",
-      "Step 264 of 269\n",
-      "Step 265 of 269\n",
-      "Step 266 of 269\n",
-      "Step 267 of 269\n",
-      "Step 268 of 269\n",
-      "Step 269 of 269\n",
-      "CPU times: total: 37min 52s\n",
-      "Wall time: 21min 7s\n"
+      "Step 1 of 277\n",
+      "Step 2 of 277\n",
+      "Step 3 of 277\n",
+      "Step 4 of 277\n",
+      "Step 5 of 277\n",
+      "Step 6 of 277\n",
+      "Step 7 of 277\n",
+      "Step 8 of 277\n",
+      "Step 9 of 277\n",
+      "Step 10 of 277\n",
+      "Step 11 of 277\n",
+      "Step 12 of 277\n",
+      "Step 13 of 277\n",
+      "Step 14 of 277\n",
+      "Step 15 of 277\n",
+      "Step 16 of 277\n",
+      "Step 17 of 277\n",
+      "Step 18 of 277\n",
+      "Step 19 of 277\n",
+      "Step 20 of 277\n",
+      "Step 21 of 277\n",
+      "Step 22 of 277\n",
+      "Step 23 of 277\n",
+      "Step 24 of 277\n",
+      "Step 25 of 277\n",
+      "Step 26 of 277\n",
+      "Step 27 of 277\n",
+      "Step 28 of 277\n",
+      "Step 29 of 277\n",
+      "Step 30 of 277\n",
+      "Step 31 of 277\n",
+      "Step 32 of 277\n",
+      "Step 33 of 277\n",
+      "Step 34 of 277\n",
+      "Step 35 of 277\n",
+      "Step 36 of 277\n",
+      "Step 37 of 277\n",
+      "Step 38 of 277\n",
+      "Step 39 of 277\n",
+      "Step 40 of 277\n",
+      "Step 41 of 277\n",
+      "Step 42 of 277\n",
+      "Step 43 of 277\n",
+      "Step 44 of 277\n",
+      "Step 45 of 277\n",
+      "Step 46 of 277\n",
+      "Step 47 of 277\n",
+      "Step 48 of 277\n",
+      "Step 49 of 277\n",
+      "Step 50 of 277\n",
+      "Step 51 of 277\n",
+      "Step 52 of 277\n",
+      "Step 53 of 277\n",
+      "Step 54 of 277\n",
+      "Step 55 of 277\n",
+      "Step 56 of 277\n",
+      "Step 57 of 277\n",
+      "Step 58 of 277\n",
+      "Step 59 of 277\n",
+      "Step 60 of 277\n",
+      "Step 61 of 277\n",
+      "Step 62 of 277\n",
+      "Step 63 of 277\n",
+      "Step 64 of 277\n",
+      "Step 65 of 277\n",
+      "Step 66 of 277\n",
+      "Step 67 of 277\n",
+      "Step 68 of 277\n",
+      "Step 69 of 277\n",
+      "Step 70 of 277\n",
+      "Step 71 of 277\n",
+      "Step 72 of 277\n",
+      "Step 73 of 277\n",
+      "Step 74 of 277\n",
+      "Step 75 of 277\n",
+      "Step 76 of 277\n",
+      "Step 77 of 277\n",
+      "Step 78 of 277\n",
+      "Step 79 of 277\n",
+      "Step 80 of 277\n",
+      "Step 81 of 277\n",
+      "Step 82 of 277\n",
+      "Step 83 of 277\n",
+      "Step 84 of 277\n",
+      "Step 85 of 277\n",
+      "Step 86 of 277\n",
+      "Step 87 of 277\n",
+      "Step 88 of 277\n",
+      "Step 89 of 277\n",
+      "Step 90 of 277\n",
+      "Step 91 of 277\n",
+      "Step 92 of 277\n",
+      "Step 93 of 277\n",
+      "Step 94 of 277\n",
+      "Step 95 of 277\n",
+      "Step 96 of 277\n",
+      "Step 97 of 277\n",
+      "Step 98 of 277\n",
+      "Step 99 of 277\n",
+      "Step 100 of 277\n",
+      "Step 101 of 277\n",
+      "Step 102 of 277\n",
+      "Step 103 of 277\n",
+      "Step 104 of 277\n",
+      "Step 105 of 277\n",
+      "Step 106 of 277\n",
+      "Step 107 of 277\n",
+      "Step 108 of 277\n",
+      "Step 109 of 277\n",
+      "Step 110 of 277\n",
+      "Step 111 of 277\n",
+      "Step 112 of 277\n",
+      "Step 113 of 277\n",
+      "Step 114 of 277\n",
+      "Step 115 of 277\n",
+      "Step 116 of 277\n",
+      "Step 117 of 277\n",
+      "Step 118 of 277\n",
+      "Step 119 of 277\n",
+      "Step 120 of 277\n",
+      "Step 121 of 277\n",
+      "Step 122 of 277\n",
+      "Step 123 of 277\n",
+      "Step 124 of 277\n",
+      "Step 125 of 277\n",
+      "Step 126 of 277\n",
+      "Step 127 of 277\n",
+      "Step 128 of 277\n",
+      "Step 129 of 277\n",
+      "Step 130 of 277\n",
+      "Step 131 of 277\n",
+      "Step 132 of 277\n",
+      "Step 133 of 277\n",
+      "Step 134 of 277\n",
+      "Step 135 of 277\n",
+      "Step 136 of 277\n",
+      "Step 137 of 277\n",
+      "Step 138 of 277\n",
+      "Step 139 of 277\n",
+      "Step 140 of 277\n",
+      "Step 141 of 277\n",
+      "Step 142 of 277\n",
+      "Step 143 of 277\n",
+      "Step 144 of 277\n",
+      "Step 145 of 277\n",
+      "Step 146 of 277\n",
+      "Step 147 of 277\n",
+      "Step 148 of 277\n",
+      "Step 149 of 277\n",
+      "Step 150 of 277\n",
+      "Step 151 of 277\n",
+      "Step 152 of 277\n",
+      "Step 153 of 277\n",
+      "Step 154 of 277\n",
+      "Step 155 of 277\n",
+      "Step 156 of 277\n",
+      "Step 157 of 277\n",
+      "Step 158 of 277\n",
+      "Step 159 of 277\n",
+      "Step 160 of 277\n",
+      "Step 161 of 277\n",
+      "Step 162 of 277\n",
+      "Step 163 of 277\n",
+      "Step 164 of 277\n",
+      "Step 165 of 277\n",
+      "Step 166 of 277\n",
+      "Step 167 of 277\n",
+      "Step 168 of 277\n",
+      "Step 169 of 277\n",
+      "Step 170 of 277\n",
+      "Step 171 of 277\n",
+      "Step 172 of 277\n",
+      "Step 173 of 277\n",
+      "Step 174 of 277\n",
+      "Step 175 of 277\n",
+      "Step 176 of 277\n",
+      "Step 177 of 277\n",
+      "Step 178 of 277\n",
+      "Step 179 of 277\n",
+      "Step 180 of 277\n",
+      "Step 181 of 277\n",
+      "Step 182 of 277\n",
+      "Step 183 of 277\n",
+      "Step 184 of 277\n",
+      "Step 185 of 277\n",
+      "Step 186 of 277\n",
+      "Step 187 of 277\n",
+      "Step 188 of 277\n",
+      "Step 189 of 277\n",
+      "Step 190 of 277\n",
+      "Step 191 of 277\n",
+      "Step 192 of 277\n",
+      "Step 193 of 277\n",
+      "Step 194 of 277\n",
+      "Step 195 of 277\n",
+      "Step 196 of 277\n",
+      "Step 197 of 277\n",
+      "Step 198 of 277\n",
+      "Step 199 of 277\n",
+      "Step 200 of 277\n",
+      "Step 201 of 277\n",
+      "Step 202 of 277\n",
+      "Step 203 of 277\n",
+      "Step 204 of 277\n",
+      "Step 205 of 277\n",
+      "Step 206 of 277\n",
+      "Step 207 of 277\n",
+      "Step 208 of 277\n",
+      "Step 209 of 277\n",
+      "Step 210 of 277\n",
+      "Step 211 of 277\n",
+      "Step 212 of 277\n",
+      "Step 213 of 277\n",
+      "Step 214 of 277\n",
+      "Step 215 of 277\n",
+      "Step 216 of 277\n",
+      "Step 217 of 277\n",
+      "Step 218 of 277\n",
+      "Step 219 of 277\n",
+      "Step 220 of 277\n",
+      "Step 221 of 277\n",
+      "Step 222 of 277\n",
+      "Step 223 of 277\n",
+      "Step 224 of 277\n",
+      "Step 225 of 277\n",
+      "Step 226 of 277\n",
+      "Step 227 of 277\n",
+      "Step 228 of 277\n",
+      "Step 229 of 277\n",
+      "Step 230 of 277\n",
+      "Step 231 of 277\n",
+      "Step 232 of 277\n",
+      "Step 233 of 277\n",
+      "Step 234 of 277\n",
+      "Step 235 of 277\n",
+      "Step 236 of 277\n",
+      "Step 237 of 277\n",
+      "Step 238 of 277\n",
+      "Step 239 of 277\n",
+      "Step 240 of 277\n",
+      "Step 241 of 277\n",
+      "Step 242 of 277\n",
+      "Step 243 of 277\n",
+      "Step 244 of 277\n",
+      "Step 245 of 277\n",
+      "Step 246 of 277\n",
+      "Step 247 of 277\n",
+      "Step 248 of 277\n",
+      "Step 249 of 277\n",
+      "Step 250 of 277\n",
+      "Step 251 of 277\n",
+      "Step 252 of 277\n",
+      "Step 253 of 277\n",
+      "Step 254 of 277\n",
+      "Step 255 of 277\n",
+      "Step 256 of 277\n",
+      "Step 257 of 277\n",
+      "Step 258 of 277\n",
+      "Step 259 of 277\n",
+      "Step 260 of 277\n",
+      "Step 261 of 277\n",
+      "Step 262 of 277\n",
+      "Step 263 of 277\n",
+      "Step 264 of 277\n",
+      "Step 265 of 277\n",
+      "Step 266 of 277\n",
+      "Step 267 of 277\n",
+      "Step 268 of 277\n",
+      "Step 269 of 277\n",
+      "Step 270 of 277\n",
+      "Step 271 of 277\n",
+      "Step 272 of 277\n",
+      "Step 273 of 277\n",
+      "Step 274 of 277\n",
+      "Step 275 of 277\n",
+      "Step 276 of 277\n",
+      "Step 277 of 277\n",
+      "CPU times: total: 1min 44s\n",
+      "Wall time: 2min 18s\n"
      ]
     }
    ],
@@ -410,7 +416,6 @@
        "      <th>enmo</th>\n",
        "      <th>num_series_id</th>\n",
        "      <th>awake</th>\n",
-       "      <th>unknown</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -423,7 +428,6 @@
        "      <td>0.0217</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -434,7 +438,6 @@
        "      <td>0.0215</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -445,7 +448,6 @@
        "      <td>0.0216</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -456,7 +458,6 @@
        "      <td>0.0213</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -467,7 +468,6 @@
        "      <td>0.0215</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -481,12 +481,12 @@
        "3  038441c925bb     3  2018-08-14T15:30:15-0400  2.6368  0.0213   \n",
        "4  038441c925bb     4  2018-08-14T15:30:20-0400  2.6368  0.0215   \n",
        "\n",
-       "   num_series_id  awake  unknown  \n",
-       "0              1      1        0  \n",
-       "1              1      1        0  \n",
-       "2              1      1        0  \n",
-       "3              1      1        0  \n",
-       "4              1      1        0  "
+       "   num_series_id  awake  \n",
+       "0              1      1  \n",
+       "1              1      1  \n",
+       "2              1      1  \n",
+       "3              1      1  \n",
+       "4              1      1  "
       ]
      },
      "execution_count": 5,
@@ -513,7 +513,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train.to_parquet('../../data/processed/series.parquet')"
+    "train.to_parquet('../../data/raw/series_merged.parquet')"
    ]
   }
  ],
@@ -533,7 +533,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
