--- a/notebooks/data/train-test-split.ipynb
+++ b/notebooks/data/train-test-split.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "series = pd.read_parquet('../../data/processed/series.parquet')\n",
+    "series = pd.read_parquet('../../data/cleaned/series.parquet')\n",
     "events = pd.read_csv('../../data/cleaned/events.csv')"
    ]
   },
