--- a/notebooks/data/feature-engineering-lags-transformer.ipynb
+++ b/notebooks/data/feature-engineering-lags-transformer.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "324a560c",
    "metadata": {
     "ExecuteTime": {
@@ -54,7 +54,7 @@
    },
    "outputs": [],
    "source": [
-    "IS_TRAINING = True\n",
+    "IS_TRAINING = False\n",
     "if IS_TRAINING:\n",
     "    FILE = '../../data/processed/train_series_split_normalized.parquet'\n",
     "else:\n",
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "id": "a775cf39",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "id": "3fa6384c",
    "metadata": {},
    "outputs": [
@@ -94,7 +94,7 @@
        "49"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "id": "25844b7a",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "5f7819507cd29d98",
    "metadata": {
     "ExecuteTime": {
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "id": "16b52907",
    "metadata": {},
    "outputs": [],
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "id": "c0d067155defaebc",
    "metadata": {
     "ExecuteTime": {
@@ -199,14 +199,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 215/215 [3:08:09<00:00, 52.51s/it]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████████| 54/54 [33:49<00:00, 37.59s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Feature Engineering took 11292.814343214035 seconds\n"
+      "Feature Engineering took 2030.3766062259674 seconds\n"
      ]
     }
    ],
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "id": "9d108c48",
    "metadata": {},
    "outputs": [
@@ -259,31 +259,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
+       "      <td>7</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
+       "      <td>7</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1</td>\n",
+       "      <td>7</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1</td>\n",
+       "      <td>7</td>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1</td>\n",
+       "      <td>7</td>\n",
        "      <td>1</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
@@ -294,58 +294,58 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>87105775</th>\n",
-       "      <td>277</td>\n",
+       "      <th>16484066</th>\n",
+       "      <td>276</td>\n",
        "      <td>1</td>\n",
-       "      <td>592375</td>\n",
+       "      <td>603354</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>87105776</th>\n",
-       "      <td>277</td>\n",
+       "      <th>16484067</th>\n",
+       "      <td>276</td>\n",
        "      <td>1</td>\n",
-       "      <td>592376</td>\n",
+       "      <td>603355</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>87105777</th>\n",
-       "      <td>277</td>\n",
+       "      <th>16484068</th>\n",
+       "      <td>276</td>\n",
        "      <td>1</td>\n",
-       "      <td>592377</td>\n",
+       "      <td>603356</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>87105778</th>\n",
-       "      <td>277</td>\n",
+       "      <th>16484069</th>\n",
+       "      <td>276</td>\n",
        "      <td>1</td>\n",
-       "      <td>592378</td>\n",
+       "      <td>603357</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>87105779</th>\n",
-       "      <td>277</td>\n",
+       "      <th>16484070</th>\n",
+       "      <td>276</td>\n",
        "      <td>1</td>\n",
-       "      <td>592379</td>\n",
+       "      <td>603358</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>87105780 rows × 3 columns</p>\n",
+       "<p>16484071 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "          num_series_id  awake  series_index\n",
-       "0                     1      1             0\n",
-       "1                     1      1             1\n",
-       "2                     1      1             2\n",
-       "3                     1      1             3\n",
-       "4                     1      1             4\n",
+       "0                     7      1             0\n",
+       "1                     7      1             1\n",
+       "2                     7      1             2\n",
+       "3                     7      1             3\n",
+       "4                     7      1             4\n",
        "...                 ...    ...           ...\n",
-       "87105775            277      1        592375\n",
-       "87105776            277      1        592376\n",
-       "87105777            277      1        592377\n",
-       "87105778            277      1        592378\n",
-       "87105779            277      1        592379\n",
+       "16484066            276      1        603354\n",
+       "16484067            276      1        603355\n",
+       "16484068            276      1        603356\n",
+       "16484069            276      1        603357\n",
+       "16484070            276      1        603358\n",
        "\n",
-       "[87105780 rows x 3 columns]"
+       "[16484071 rows x 3 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "id": "095953db",
    "metadata": {},
    "outputs": [],
@@ -367,9 +367,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "aich",
+   "display_name": "ai-challenge",
    "language": "python",
-   "name": "aich"
+   "name": "ai-challenge"
   },
   "language_info": {
    "codemirror_mode": {
@@ -381,7 +381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
