--- a/notebooks/data/feature-engineering-lags-transformer.ipynb
+++ b/notebooks/data/feature-engineering-lags-transformer.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "a775cf39",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "3fa6384c",
    "metadata": {},
    "outputs": [
@@ -94,7 +94,7 @@
        "49"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "25844b7a",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "5f7819507cd29d98",
    "metadata": {
     "ExecuteTime": {
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "16b52907",
    "metadata": {},
    "outputs": [],
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "c0d067155defaebc",
    "metadata": {
     "ExecuteTime": {
@@ -199,14 +199,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 54/54 [00:54<00:00,  1.01s/it]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████████| 54/54 [35:09<00:00, 39.06s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Feature Engineering took 54.84847617149353 seconds\n"
+      "Feature Engineering took 2109.914473295212 seconds\n"
      ]
     }
    ],
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "9d108c48",
    "metadata": {},
    "outputs": [
@@ -301,43 +301,43 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20009335</th>\n",
+       "      <th>16484066</th>\n",
        "      <td>276</td>\n",
        "      <td>620635</td>\n",
        "      <td>1</td>\n",
-       "      <td>620635</td>\n",
+       "      <td>603354</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20009336</th>\n",
+       "      <th>16484067</th>\n",
        "      <td>276</td>\n",
        "      <td>620636</td>\n",
        "      <td>1</td>\n",
-       "      <td>620636</td>\n",
+       "      <td>603355</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20009337</th>\n",
+       "      <th>16484068</th>\n",
        "      <td>276</td>\n",
        "      <td>620637</td>\n",
        "      <td>1</td>\n",
-       "      <td>620637</td>\n",
+       "      <td>603356</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20009338</th>\n",
+       "      <th>16484069</th>\n",
        "      <td>276</td>\n",
        "      <td>620638</td>\n",
        "      <td>1</td>\n",
-       "      <td>620638</td>\n",
+       "      <td>603357</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20009339</th>\n",
+       "      <th>16484070</th>\n",
        "      <td>276</td>\n",
        "      <td>620639</td>\n",
        "      <td>1</td>\n",
-       "      <td>620639</td>\n",
+       "      <td>603358</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>20009340 rows × 4 columns</p>\n",
+       "<p>16484071 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -348,16 +348,16 @@
        "3                     7       3      1             3\n",
        "4                     7       4      1             4\n",
        "...                 ...     ...    ...           ...\n",
-       "20009335            276  620635      1        620635\n",
-       "20009336            276  620636      1        620636\n",
-       "20009337            276  620637      1        620637\n",
-       "20009338            276  620638      1        620638\n",
-       "20009339            276  620639      1        620639\n",
+       "16484066            276  620635      1        603354\n",
+       "16484067            276  620636      1        603355\n",
+       "16484068            276  620637      1        603356\n",
+       "16484069            276  620638      1        603357\n",
+       "16484070            276  620639      1        603358\n",
        "\n",
-       "[20009340 rows x 4 columns]"
+       "[16484071 rows x 4 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "095953db",
    "metadata": {},
    "outputs": [],
@@ -379,9 +379,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "aich",
+   "display_name": "ai-challenge",
    "language": "python",
-   "name": "aich"
+   "name": "ai-challenge"
   },
   "language_info": {
    "codemirror_mode": {
@@ -393,7 +393,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
