Adaption of rnn submission file

--- a/notebooks/transformer/submission.ipynb
+++ b/notebooks/transformer/submission.ipynb
@@ -1349,6 +1349,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "smoothing_length = 12 * 30 # 30 Minutes\n",
+    "\n",
     "def get_events_smoothed(test_series) :\n",
     "    series_ids = test_series['num_series_id'].unique()\n",
     "    events = []\n",
@@ -1357,7 +1359,6 @@
     "        # Collecting sample and normalizing features\n",
     "        X = test_series[test_series.num_series_id == idx]\n",
     "                \n",
-    "        smoothing_length = 12 * 30 # 30 Minutes\n",
     "        # We average the confidence, that the participant is awake\n",
     "        X[\"confidence_awake\"] = X[\"prediction_confidence_1\"].rolling(smoothing_length, center=True).mean().bfill().ffill()\n",
     "        X[\"asleep\"] = X[\"prediction_confidence_0\"].rolling(smoothing_length, center=True).mean().bfill().ffill()\n",
@@ -1386,10 +1387,10 @@
     "                score = 1 - X[(X['step'] >= onset) & (X['step'] < wakeup)]['confidence_awake'].mean()\n",
     "\n",
     "                # Adding sleep event to dataframe\n",
-    "                onset_row = {'row_id': len(events), 'series_id': idx, 'step': onset, 'event': 'onset', 'score': score}                \n",
+    "                onset_row = {'series_id': idx, 'step': onset, 'event': 'onset', 'score': score}                \n",
     "                events.append(onset_row)\n",
     "\n",
-    "                wakeup_row = {'row_id': len(events), 'series_id': idx, 'step': wakeup, 'event': 'wakeup', 'score': score}\n",
+    "                wakeup_row = {'series_id': idx, 'step': wakeup, 'event': 'wakeup', 'score': score}\n",
     "                events.append(wakeup_row)\n",
     "\n",
     "    return pd.DataFrame(events)"
