mlp feature engineering fixed

--- a/notebooks/data/feature-engineering.ipynb
+++ b/notebooks/data/feature-engineering.ipynb
@@ -49,7 +49,7 @@
    },
    "outputs": [],
    "source": [
-    "train_series = pd.read_parquet('../../data/processed/series.parquet', columns=['series_id'])"
+    "train_series = pd.read_parquet('../../data/cleaned/series.parquet', columns=['series_id'])"
    ]
   },
   {
@@ -89,7 +89,7 @@
    "outputs": [],
    "source": [
     "def make_features_chunck(series_id, periods=NUM_STEPS):\n",
-    "    df = pd.read_parquet('../../data/processed/series.parquet', filters=[('series_id','=',series_id)])\n",
+    "    df = pd.read_parquet('../../data/cleaned/series.parquet', filters=[('series_id','=',series_id)])\n",
     "    \n",
     "    df[\"hour\"] = df['timestamp'].str[11:13]\n",
     "    \n",
@@ -146,14 +146,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████| 269/269 [18:56<00:00,  4.22s/it]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 269/269 [20:20<00:00,  4.54s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Feature Engineering took 1491.8568377494812 seconds\n"
+      "Feature Engineering took 1514.829260110855 seconds\n"
      ]
     }
    ],
@@ -197,7 +197,7 @@
        "      <th>enmo</th>\n",
        "      <th>num_series_id</th>\n",
        "      <th>awake</th>\n",
-       "      <th>unknown</th>\n",
+       "      <th>clean</th>\n",
        "      <th>hour</th>\n",
        "      <th>anglez_abs</th>\n",
        "      <th>...</th>\n",
@@ -347,12 +347,12 @@
        "3  038441c925bb     3  2018-08-14T15:30:15-0400  2.6368  0.0213   \n",
        "4  038441c925bb     4  2018-08-14T15:30:20-0400  2.6368  0.0215   \n",
        "\n",
-       "   num_series_id  awake  unknown hour  anglez_abs  ...  enmo_diff  \\\n",
-       "0              1      1        0   15      2.6367  ...    -0.0047   \n",
-       "1              1      1        0   15      2.6368  ...    -0.0047   \n",
-       "2              1      1        0   15      2.6370  ...    -0.0047   \n",
-       "3              1      1        0   15      2.6368  ...    -0.0047   \n",
-       "4              1      1        0   15      2.6368  ...    -0.0047   \n",
+       "   num_series_id  awake  clean hour  anglez_abs  ...  enmo_diff  \\\n",
+       "0              1      1      0   15      2.6367  ...    -0.0047   \n",
+       "1              1      1      0   15      2.6368  ...    -0.0047   \n",
+       "2              1      1      0   15      2.6370  ...    -0.0047   \n",
+       "3              1      1      0   15      2.6368  ...    -0.0047   \n",
+       "4              1      1      0   15      2.6368  ...    -0.0047   \n",
        "\n",
        "   anglez_x_enmo  anglez_rolling_mean  enmo_rolling_mean  anglez_rolling_max  \\\n",
        "0       0.057216             7.573975            0.02233             54.8498   \n",
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "22e9ec9f0edb7bf1",
    "metadata": {
     "is_executing": true
