--- a/notebooks/data/feature-engineering-lags-transformer.ipynb
+++ b/notebooks/data/feature-engineering-lags-transformer.ipynb
@@ -123,7 +123,7 @@
     "\n",
     "def save_chunk(num_series_id, chunk):\n",
     "    series_length, series_columns = chunk[FEATURES].values.shape\n",
-    "    X = torch.from_numpy(np.vstack(np.ravel(chunk[FEATURES].values))\n",
+    "    X = torch.from_numpy(np.array(np.ravel(chunk[FEATURES].values).tolist())\n",
     "                           .reshape(series_length, series_columns, 2)).to(torch.float32)\n",
     "    torch.save(X, file_path_prefix + str(num_series_id) + \".pt\")"
    ]
@@ -175,7 +175,7 @@
     "def make_features(series):\n",
     "    overview_data = []\n",
     "\n",
-    "    for num_series_id in tqdm(series.num_series_id.unique()[0:1]):\n",
+    "    for num_series_id in tqdm(series.num_series_id.unique()):\n",
     "        chunk = make_features_chunk(num_series_id)"
    ]
   },
@@ -349,15 +349,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# overview.to_parquet(file_path_prefix + \"overview.parquet\")"
+    "overview.to_parquet(file_path_prefix + \"overview.parquet\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ai-challenge",
+   "display_name": "aich",
    "language": "python",
-   "name": "ai-challenge"
+   "name": "aich"
   },
   "language_info": {
    "codemirror_mode": {
@@ -369,7 +369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
