Update kaggle submission file

--- a/notebooks/transformer/submission-kaggle.ipynb
+++ b/notebooks/transformer/submission-kaggle.ipynb
@@ -16,19 +16,13 @@
     "from time import time\n",
     "\n",
     "# Data\n",
-    "from sklearn.preprocessing import StandardScaler\n",
     "from torch.utils.data import DataLoader, TensorDataset\n",
     "\n",
     "\n",
     "# Modeling\n",
     "import pytorch_lightning as pl\n",
     "import torch\n",
-    "import torch.nn.functional as F\n",
     "from torch import nn, Tensor\n",
-    "from torchmetrics import MetricCollection\n",
-    "from torchmetrics.classification import MulticlassAccuracy, MulticlassPrecision, MulticlassRecall, MulticlassF1Score\n",
-    "from torch.optim import AdamW\n",
-    "from torch.optim.lr_scheduler import LinearLR\n",
     "\n",
     "# Disable warnings\n",
     "pd.options.mode.chained_assignment = None"
@@ -182,18 +176,22 @@
     "def data_feature_engineering(series):\n",
     "\n",
     "    series['t_0'] = series[['anglez', 'enmo']].values.tolist()\n",
+    "    columns_past = []\n",
     "\n",
     "    for i in range(1, 25):\n",
     "        series[f'anglez_lag_{i}'] = series[\"anglez\"].shift(i).bfill()\n",
     "        series[f'enmo_lag_{i}'] = series[\"enmo\"].shift(i).bfill()\n",
     "        series[f't_lag_{i}'] = series[[f'anglez_lag_{i}', f'enmo_lag_{i}']].values.tolist()\n",
-    "        series = series.drop(columns=[f'anglez_lag_{i}', f'enmo_lag_{i}'])\n",
+    "        columns_past.extend([f'anglez_lag_{i}', f'enmo_lag_{i}'])\n",
+    "    series = series.drop(columns=columns_past)\n",
     "\n",
+    "    columns_future = []\n",
     "    for i in range(-1, -25, -1):\n",
     "        series[f'anglez_lag_{i}'] = series[\"anglez\"].shift(i).ffill()\n",
     "        series[f'enmo_lag_{i}'] = series[\"enmo\"].shift(i).ffill()\n",
     "        series[f't_lag_{i}'] = series[[f'anglez_lag_{i}', f'enmo_lag_{i}']].values.tolist()\n",
-    "        series = series.drop(columns=[f'anglez_lag_{i}', f'enmo_lag_{i}'])\n",
+    "        columns_future.extend([f'anglez_lag_{i}', f'enmo_lag_{i}'])\n",
+    "    series = series.drop(columns=columns_future)\n",
     "    \n",
     "    return series.reset_index(drop=True)"
    ]
@@ -536,10 +534,10 @@
     "            score = 1 - series[(series['step'] >= onset) & (series['step'] < wakeup)]['confidence_awake'].mean()\n",
     "\n",
     "            # Adding sleep event to dataframe\n",
-    "            onset_row = {'row_id': len(events), 'series_id': series_id, 'step': onset, 'event': 'onset', 'score': score}                \n",
+    "            onset_row = {'series_id': series_id, 'step': onset, 'event': 'onset', 'score': score}                \n",
     "            events.append(onset_row)\n",
     "\n",
-    "            wakeup_row = {'row_id': len(events), 'series_id': series_id, 'step': wakeup, 'event': 'wakeup', 'score': score}\n",
+    "            wakeup_row = {'series_id': series_id, 'step': wakeup, 'event': 'wakeup', 'score': score}\n",
     "            events.append(wakeup_row)\n",
     "\n",
     "    return pd.DataFrame(events)\n"
